# mediakit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
docs/: DOCS.md  SHOWCASE_ROADMAP.md
docs/deploy/: mediakit-server.service  mediakit-worker.service
docs/experiments/: README.md
scripts/: gen_covers.py  preview_covers.py
src/mediakit/: __init__.py  config.py  logging.py
src/mediakit/backends/comfyui/: client.py  exceptions.py  video_models.py
src/mediakit/backends/comfyui/workflows/: bg_remove.py  img2video_cogvideox.py  img2video_ltxv.py  img_edit.py  img_edit_qwen.py  txt2img.py  txt2img_flux.py  txt2video_cogvideox.py  txt2video_ltxv.py  txt2video_wan.py  upscale.py
src/mediakit/backends/native/: encoder.py  metadata.py  resizer.py  video.py
src/mediakit/cli/: main.py
src/mediakit/cli/commands/: __init__.py  bg_remove.py  compress.py  convert.py  img2video.py  img_edit.py  lqip.py  resize.py  txt2img.py  txt2video.py  upscale.py  variants.py
src/mediakit/jobs/: queue.py  status.py  worker.py
src/mediakit/models_registry/: __init__.py
src/mediakit/ops/: __init__.py  bg_remove.py  compress.py  convert.py  img2video.py  img_edit.py  lqip.py  resize.py  txt2img.py  txt2video.py  upscale.py  variants.py
src/mediakit/pipelines/: __init__.py  article_cover.py  base.py  photo_animate.py  photo_finalize.py  product_shot.py  responsive_set.py  seamless_video.py  txt_to_video_hq.py
src/mediakit/schemas/: ai_ops.py  ops.py  video_ops.py
src/mediakit/server/: app.py  deps.py  utils.py
src/mediakit/server/routes/: health.py  jobs.py  ops.py  pipelines.py
tests/integration/: conftest.py  test_api_async.py  test_api_health.py  test_api_sync.py
tests/unit/: test_native_ops.py
